<resources>
    <string name="app_name" translatable="false">Todo Hive</string>
    <string name="app_name_splash" translatable="false">TodoHive</string>

    <string name="setting_language_en" translatable="false">English</string>
    <string name="setting_language_fr" translatable="false">Français</string>
    <string name="setting_language_vn" translatable="false">Viet Nam</string>
    <string name="setting_language_es" translatable="false">Española</string>
    <string name="setting_language_zh" translatable="false">Chinese</string>
    <string name="setting_language_pt" translatable="false">Português</string>
    <string name="setting_language_ru" translatable="false">Русский</string>

    <string name="splash_title_sub">Innovative, user-friendly,and easy.</string>
    <string name="splash_title_get_start">Get started</string>
    <!--Home-->
    <string name="home_title_today_task">Today’s Tasks</string>
    <string name="home_title_tag_total">Total</string>
    <string name="home_title_tag_work">Work</string>
    <string name="home_title_tag_dailytask">Daily Task</string>
    <string name="home_title_tag_study">Study</string>

    <string name="setting_user_title_email">Email</string>
    <string name="setting_user_title_phone">Phone</string>
    <string name="setting_user_log_out">Log out</string>

    <string name="setting_title_profile">Profile</string>
    <string name="setting_title_general">General</string>
    <string name="setting_title_personal_info">Personal Info</string>
    <string name="setting_title_personal_language">Language</string>
    <string name="setting_title_personal_about">About</string>
    <string name="setting_title_personal_help_center">Help Center</string>
    <string name="setting_title_personal_privacy_policy">Privacy Policy</string>
    <string name="setting_title_personal_privacy_logout">Logout</string>

    <string name="edit_title">Edit your task</string>
    <string name="edit_title_task_name">Task Name</string>
    <string name="edit_title_description">Description</string>
    <string name="edit_title_date_time">Date &amp; Time</string>
    <string name="edit_title_start_time">Start time</string>
    <string name="edit_title_end_time">End time</string>
    <string name="edit_title_task_categories">Category</string>
    <string name="edit_title_task_status">Status</string>
    <string name="edit_title_save_changes">Save changes</string>
    <string name="edit_title_hint_task_name">Type task name</string>
    <string name="edit_title_hint_start_time">Type start time</string>
    <string name="edit_title_hint_end_time">Type end time</string>
    <string name="edit_title_hint_description">Type description</string>

    <string name="dialog_result_action_no">No</string>
    <string name="dialog_save_change_title">Do you want save?</string>
    <string name="dialog_save_change_content">Create your task to make things easier</string>
    <string name="dialog_save_change_action">Yes</string>
    <string name="dialog_exit_title">Do you want save before exit?</string>
    <string name="dialog_exit_content">Save before exit now</string>
    <string name="dialog_exit_action">Save</string>
    <string name="dialog_remove_title">Do you want remove?</string>
    <string name="dialog_remove_content">It\'s will be remove forever</string>
    <string name="dialog_remove_action">Yes</string>

    <string name="home_title_create">Create new task</string>

</resources>