<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_background">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:src="@drawable/img_bg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintEnd_toStartOf="@id/txtTitle"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_title"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/imgBack"
            app:layout_constraintEnd_toStartOf="@id/imgEnd"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/imgBack"
            app:layout_constraintTop_toTopOf="@id/imgBack" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgEnd"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:src="@drawable/ic_back"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/imgBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/txtTitle"
            app:layout_constraintTop_toTopOf="@id/imgBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleTaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_title_task_name"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/edit_title_hint_task_name"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_10ssp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/txtTitleTaskName" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleTaskCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_title_task_categories"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtTaskName" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/txtTitleTaskCategories"
            app:spanCount="3"
            tools:itemCount="3"
            tools:listitem="@layout/layout_item_categories_status" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_title_date_time"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvCategories" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableEnd="@drawable/ic_date"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/edit_title_hint_task_name"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_10ssp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/txtTitleDate" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_title_start_time"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtDate" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtStartTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableEnd="@drawable/ic_down"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/edit_title_hint_start_time"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_10ssp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@id/edtEndTime"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTitleStartTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_title_end_time"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="@id/edtEndTime"
            app:layout_constraintTop_toBottomOf="@id/edtDate" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEndTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableEnd="@drawable/ic_down"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/edit_title_hint_end_time"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_10ssp"
            android:paddingEnd="@dimen/_10sdp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edtStartTime"
            app:layout_constraintTop_toBottomOf="@id/txtTitleStartTime" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitleStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_title_task_status"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtStartTime" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/txtTitleStatus"
            app:spanCount="2"
            tools:itemCount="2"
            tools:listitem="@layout/layout_item_categories_status" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/edit_title_description"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvStatus" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10ssp"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/edit_title_hint_description"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_10ssp"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintTop_toBottomOf="@id/txtDescription" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSaveChanges"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_radiu_8"
            android:backgroundTint="@color/color_9747FF"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_35sdp"
            android:paddingVertical="@dimen/_7sdp"
            android:text="@string/edit_title_save_changes"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
