<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/img_bg_splash" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgApp"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/img_icon_app"
            app:layout_constraintBottom_toTopOf="@id/txtAppName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/inter_semibold"
            android:text="@string/app_name_splash"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_30ssp"
            app:layout_constraintBottom_toTopOf="@id/txtSub"
            app:layout_constraintEnd_toEndOf="@id/imgApp"
            app:layout_constraintStart_toStartOf="@id/imgApp"
            app:layout_constraintTop_toBottomOf="@id/imgApp"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_regular"
            android:gravity="center"
            android:text="@string/splash_title_sub"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/txtStart"
            app:layout_constraintEnd_toEndOf="@id/imgApp"
            app:layout_constraintStart_toStartOf="@id/imgApp"
            app:layout_constraintTop_toBottomOf="@id/txtAppName"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintWidth_percent="0.5" />

        <View
            android:id="@+id/vStart"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_get_start"
            app:layout_constraintBottom_toBottomOf="@id/txtStart"
            app:layout_constraintEnd_toEndOf="@id/imgStart"
            app:layout_constraintStart_toStartOf="@id/txtStart"
            app:layout_constraintTop_toTopOf="@id/txtStart" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/inter_regular"
            android:paddingVertical="@dimen/_10sdp"
            android:paddingStart="@dimen/_30sdp"
            android:text="@string/splash_title_get_start"
            android:textColor="@color/primary_text_color"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgStart"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/imgApp"
            app:layout_constraintTop_toBottomOf="@id/txtSub"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_20sdp"
            android:src="@drawable/ic_right_arrow"
            app:layout_constraintBottom_toBottomOf="@id/txtStart"
            app:layout_constraintEnd_toEndOf="@id/imgApp"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@id/txtStart"
            app:layout_constraintTop_toTopOf="@id/txtStart" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
