<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/vTopBar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_bg_top" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBackPress"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_12sdp"
            android:src="@drawable/ic_backpress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vAvatar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_avatar"
            android:backgroundTint="@color/color_4DFFFFFF"
            app:layout_constraintBottom_toBottomOf="@id/vTopBar"
            app:layout_constraintEnd_toEndOf="@id/vTopBar"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="@id/vTopBar"
            app:layout_constraintTop_toTopOf="@id/vTopBar"
            app:layout_constraintWidth_percent="0.33" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_avatar"
            app:layout_constraintBottom_toBottomOf="@id/vAvatar"
            app:layout_constraintEnd_toEndOf="@id/vAvatar"
            app:layout_constraintStart_toStartOf="@id/vAvatar"
            app:layout_constraintTop_toTopOf="@id/vAvatar" />

        <View
            android:id="@+id/vEditAvatar"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/bg_avatar"
            android:backgroundTint="@color/color_554447"
            app:layout_constraintBottom_toBottomOf="@+id/vAvatar"
            app:layout_constraintEnd_toEndOf="@+id/vAvatar" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgEdit"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:padding="@dimen/_6sdp"
            android:src="@drawable/ic_edit_avatar"
            app:layout_constraintBottom_toBottomOf="@+id/vEditAvatar"
            app:layout_constraintEnd_toEndOf="@+id/vEditAvatar"
            app:layout_constraintStart_toStartOf="@+id/vEditAvatar"
            app:layout_constraintTop_toTopOf="@+id/vEditAvatar" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNameUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/vAvatar"
            app:layout_constraintStart_toStartOf="@id/vAvatar"
            app:layout_constraintTop_toBottomOf="@id/vAvatar"
            tools:text="Varun Gupta" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_54sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/setting_user_title_email"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vTopBar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmail"
            android:layout_width="0dp"
            android:layout_height="@dimen/_51sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableEnd="@drawable/ic_edit"
            android:paddingHorizontal="@dimen/_22sdp"
            android:textColorHint="@color/color_757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail"
            app:layout_constraintWidth_percent="0.77"
            tools:hint="bvarungupta@gmail.com" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_35sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/setting_user_title_phone"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtPhone"
            android:layout_width="0dp"
            android:layout_height="@dimen/_51sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableEnd="@drawable/ic_edit"
            android:paddingHorizontal="@dimen/_22sdp"
            android:textColorHint="@color/color_757575"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtPhone"
            app:layout_constraintWidth_percent="0.77"
            tools:hint="+91 871903847362" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLogOut"
            android:layout_width="@dimen/_124sdp"
            android:layout_height="@dimen/_46sdp"
            android:background="@drawable/bg_radiu_8"
            android:backgroundTint="@color/color_FF5757"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/setting_user_log_out"
            android:layout_marginTop="@dimen/_40sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtPhone" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
